objects/Product2.object
<CustomObject>
    <fields>
        <fullName>SBQQ__Specifications__c</fullName>
        <description>Formatted specifications for this product for use in quote templates to produce spec sheets.</description>
        <inlineHelpText>Formatted specifications for this product for use in quote templates to produce spec sheets.</inlineHelpText>
        <label>Specifications</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionBase__c</fullName>
        <description>Determines whether dynamic subscriptions are calculated off List or Net product price.</description>
        <inlineHelpText>Determines whether Percent of Total is calculated off List or Net product prices.</inlineHelpText>
        <label>Percent Of Total Base</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionCategory__c</fullName>
        <description>Subscription category for this product. Applies to all products and used to limit percent of total subscriptions to certain products.</description>
        <inlineHelpText>Use this to limit percent of total calculations to certain product categories. For example, software maintenance should only calculate percentage on products with a software maintenance percent of total category.</inlineHelpText>
        <label>Percent Of Total Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Licenses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionConversion__c</fullName>
        <description>Indicates how this Product is converted to Subscriptions</description>
        <inlineHelpText>Indicates how this Product is converted to Subscriptions</inlineHelpText>
        <label>Subscription Conversion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One per subscribed asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPercent__c</fullName>
        <description>Percent of non-subscription total to be used as the price of this subscription.</description>
        <inlineHelpText>Percent of non-subscription total to be used as the price of this subscription.</inlineHelpText>
        <label>Percent Of Total (%)</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPricing__c</fullName>
        <description>Type of pricing to use for this subscription. &quot;None&quot; means this product is not a subscription.</description>
        <inlineHelpText>Type of pricing to use for this subscription. &quot;None&quot; means this product is not a subscription.</inlineHelpText>
        <label>Subscription Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTarget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Effective product on which maintenance should calculate.</description>
        <inlineHelpText>Use this field to override a product that is included in a percent of total calculation. Point this lookup to a product with a list price you would like to use for the current product’s Percent of Total calculations.</inlineHelpText>
        <label>Percent Of Total Target</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subscription Targeting Products</relationshipLabel>
        <relationshipName>SubscriptionTargetingProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <description>Term length of this subscription. Only applicable if the product is a subscription.</description>
        <inlineHelpText>Term length of this subscription. Only applicable if the product is a subscription.</inlineHelpText>
        <label>Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Renewable Subscriptions will transfer to Renewal Quotes. One-time Subscriptions will not.</description>
        <inlineHelpText>Renewable Subscriptions will transfer to Renewal Quotes. One-time Subscriptions will not.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewable</fullName>
                    <default>true</default>
                    <label>Renewable</label>
                </value>
                <value>
                    <fullName>One-time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TaxCode__c</fullName>
        <description>Specifies the tax code for taxation rules.</description>
        <inlineHelpText>Specifies the tax code for taxation rules.</inlineHelpText>
        <label>Tax code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this product is taxable.</description>
        <inlineHelpText>Indicates whether this product is taxable.</inlineHelpText>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountLevel__c</fullName>
        <description>Level of subscription term that&apos;s used to calculated term discount.</description>
        <inlineHelpText>Specify subscription term level that should be used in calculating term discount. Leave blank to indicate default.</inlineHelpText>
        <label>Term Discount Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Line</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Schedule for discounts based on subscription term.</description>
        <inlineHelpText>Schedule for discounts based on subscription term.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__DiscountSchedule__c.SBQQ__UserDefined__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Term Discounted Products</relationshipLabel>
        <relationshipName>TermDiscountedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeCredit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Credit product quoted when upgrading this product.</description>
        <inlineHelpText>Use to specify credit when quoting upgrades to this product.</inlineHelpText>
        <label>Upgrade Credit</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Credited Products</relationshipLabel>
        <relationshipName>CreditedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeRatio__c</fullName>
        <description>The conversion rate between this upgrade product and its source product.</description>
        <inlineHelpText>The conversion rate between this product&apos;s quantity and that of its source product.</inlineHelpText>
        <label>Upgrade Ratio</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the product being upgraded.</description>
        <inlineHelpText>Product being upgraded. Populating this field makes this product an upgrade.</inlineHelpText>
        <label>Upgrade Source</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Target Upgrades</relationshipLabel>
        <relationshipName>TargetUpgrades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeTarget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product being upgraded to.</description>
        <inlineHelpText>Specify the upgraded product. Only applicable if this product is an upgrade as indicated by Upgrade Source field being populated or having related Upgrade Source records.</inlineHelpText>
        <label>Upgrade Target</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Source Upgrades</relationshipLabel>
        <relationshipName>SourceUpgrades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Select_Profile__c</fullName>
        <label>Select Profile</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales User</fullName>
                </value>
                <value>
                    <fullName>ABM Sales User</fullName>
                </value>
                <value>
                    <fullName>Operations End user</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_on_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used on Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Milestone_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to the Milestone that will be used as a Template when auto-generating a new Project from the Opportunity</description>
        <inlineHelpText>Links to the Milestone that will be used as a Template when auto-generating a new Project from the Opportunity</inlineHelpText>
        <label>Milestone  Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>amc__Milestone__c.amc__Project__r.amc__Template__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>amc__Milestone__c</referenceTo>
        <relationshipLabel>Products (Template)</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Project_Unit__c</fullName>
        <description>Identifies the unit of measure for calculating the total Hours required on the Actions required for this Product</description>
        <inlineHelpText>Identifies the unit of measure for calculating the total Hours required on the Actions required for this Product</inlineHelpText>
        <label>Project Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Addon_Applicability__c</fullName>
        <label>Addon Applicability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Addon_Type__c</fullName>
        <label>Addon Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Bill_Every_Unit__c</fullName>
        <description>Bill Every Unit</description>
        <label>Bill Every Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Bill_Every__c</fullName>
        <description>CB Bill Every</description>
        <label>Bill Every</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Billing_Cycles__c</fullName>
        <description>Billing Cycles</description>
        <label>Billing Cycles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__ChargeBee_Modified_Time__c</fullName>
        <description>ChargeBee_Modified_Time</description>
        <label>ChargeBee Modified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Currency__c</fullName>
        <label>Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Free_Quantity__c</fullName>
        <description>Free Quantity</description>
        <label>Free Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Invoice_Name__c</fullName>
        <description>Invoice name in Plans and Addons</description>
        <label>Invoice Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Price__c</fullName>
        <description>CB Price</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Product_Type__c</fullName>
        <description>Product type</description>
        <inlineHelpText>Product Type as classified in Chargebee</inlineHelpText>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADDON</fullName>
                </value>
                <value>
                    <fullName>PLAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Recurring_charge_model__c</fullName>
        <description>CB Recurring charge model</description>
        <label>Recurring charge model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Set_Up_Fee__c</fullName>
        <description>Set Up Fee</description>
        <label>Set Up Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Status__c</fullName>
        <description>CB Status</description>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Trial_Period_Unit__c</fullName>
        <label>Trial Period Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Trial_Period__c</fullName>
        <description>CB Trial Period</description>
        <label>Trial Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kuga_sub__Renewable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Renewable Services are Auto-Added to Renewal Opportuntiy when an Order is Approved or Released, as per Kugamon Settings. 

Renewable Products are only Auto-Added to Renewal Opportuntiy if the Order also contains a Renewable Service.</description>
        <inlineHelpText>Renewable Services are Auto-Added to Renewal Opportuntiy when an Order is Approved or Released, as per Kugamon Settings. 

Renewable Products are only Auto-Added to Renewal Opportuntiy if the Order also contains a Renewable Service.</inlineHelpText>
        <label>Renewable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__RenewalProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Replacement Product/Service that is used for Renewal.</description>
        <inlineHelpText>Replacement Product/Service that is used for Renewal.</inlineHelpText>
        <label>Renewal Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kuga_sub__Track__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applies to Services only. Subscriptions are Auto-Created for Services when an Order is Approved or Released, as per Kugamon Settings.</description>
        <inlineHelpText>Applies to Services only. Subscriptions are Auto-Created for Services when an Order is Approved or Released, as per Kugamon Settings.</inlineHelpText>
        <label>Create Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__UpliftRenewalPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Increases the Price to the Renewable Product/Service when Auto-Added to the Renewal Opportunity. Price Increase is determined by the Uplift Renewal Price on the Additional Account Info object for the related Account.</description>
        <inlineHelpText>Increases the Price to the Renewable Product/Service when Auto-Added to the Renewal Opportunity. Price Increase is determined by the Uplift Renewal Price on the Additional Account Info object for the related Account.</inlineHelpText>
        <label>Uplift Renewal Price</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ACV_ARR_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>SBQQ__SubscriptionPercent__c</columns>
        <columns>SBQQ__PricingMethod__c</columns>
        <columns>SBQQ__SubscriptionType__c</columns>
        <columns>kuga_sub__Renewable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SBQQ__SubscriptionType__c</field>
            <operation>equals</operation>
            <value>Renewable</value>
        </filters>
        <label>ACV/ARR Products</label>
    </listViews>
    <listViews>
        <fullName>Active_Products</fullName>
        <columns>SBQQ__SortOrder__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>SBQQ__SubscriptionType__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>SBQQ__SubscriptionPercent__c</columns>
        <columns>SBQQ__PriceEditable__c</columns>
        <columns>SBQQ__IncludeInMaintenance__c</columns>
        <columns>SBQQ__ExcludeFromMaintenance__c</columns>
        <columns>SBQQ__PricingMethod__c</columns>
        <columns>SBQQ__QuantityEditable__c</columns>
        <columns>SBQQ__SubscriptionCategory__c</columns>
        <columns>External_Id__c</columns>
        <columns>ACV_ARR_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Products</label>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>External_Id__c</columns>
        <columns>SBQQ__SubscriptionBase__c</columns>
        <columns>SBQQ__SubscriptionPercent__c</columns>
        <columns>SBQQ__SubscriptionCategory__c</columns>
        <columns>SBQQ__DynamicPricingConstraint__c</columns>
        <columns>SBQQ__PriceEditable__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Grouping__c</columns>
        <columns>SBQQ__PricingMethod__c</columns>
        <columns>SBQQ__IncludeInMaintenance__c</columns>
        <columns>SBQQ__ExcludeFromMaintenance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>Copado_Subscriptions</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>SBQQ__SortOrder__c</columns>
        <columns>SBQQ__DefaultPricingTable__c</columns>
        <columns>SBQQ__IncludeInMaintenance__c</columns>
        <columns>SBQQ__PricingMethod__c</columns>
        <columns>SBQQ__SubscriptionCategory__c</columns>
        <columns>SBQQ__SubscriptionPercent__c</columns>
        <columns>SBQQ__SubscriptionPricing__c</columns>
        <columns>SBQQ__SubscriptionTerm__c</columns>
        <columns>SBQQ__NonDiscountable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Copado Subscriptions</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Product_Identification</fullName>
        <active>true</active>
        <description>Product  identification for ACV Calculation</description>
        <errorConditionFormula>NOT(ISPICKVAL(SBQQ__SubscriptionType__c, &quot;Renewable&quot;))  &amp;&amp;
( ACV_ARR_Product__c = true ||  Non_Standard_Product__c = true)</errorConditionFormula>
        <errorMessage>This Product can&apos;t be an ACV/ARR Product or Non Standard Product since the subscription type is not &quot;Renewable&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Cannot_Allocate_POT_With_Constraint</fullName>
        <active>true</active>
        <errorConditionFormula>SBQQ__AllocatePotOnOrders__c &amp;&amp; NOT(ISPICKVAL(SBQQ__DynamicPricingConstraint__c,&apos;&apos;))</errorConditionFormula>
        <errorMessage>You cannot have Allocate POT on Orders enabled if Percent of Total Constraint is specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Include_or_Exclude_Maintenance</fullName>
        <active>true</active>
        <description>Validates that either Includes In Maintenance or Excludes From Maintenance checkbox is checked but not both.</description>
        <errorConditionFormula>AND(SBQQ__IncludeInMaintenance__c,SBQQ__ExcludeFromMaintenance__c)</errorConditionFormula>
        <errorMessage>You must check either Include In Maintenance or Exclude From Maintenance checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__RecurringChargeTypeMustHaveBillingType</fullName>
        <active>true</active>
        <description>When Charge Type is Recurring, a Billing Type must be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Recurring&apos;), ISPICKVAL(SBQQ__BillingType__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is Recurring, a Billing Type must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Subscription_Conversion_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(SBQQ__SubscriptionConversion__c, &apos;One per subscribed asset&apos;) &amp;&amp; NOT(ISPICKVAL(SBQQ__SubscriptionPricing__c, &apos;Percent Of Total&apos;))</errorConditionFormula>
        <errorDisplayField>SBQQ__SubscriptionConversion__c</errorDisplayField>
        <errorMessage>You can only select One per Subscribed Asset for Subscription Conversion for Percent of Total Subscriptions</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Subscription_Pricing_Must_Be_POT</fullName>
        <active>true</active>
        <description>Subscription Pricing must be &apos;Percent of Total&apos; to set this field to true.</description>
        <errorConditionFormula>IF(
            SBQQ__AllocatePotOnOrders__c=TRUE,
            NOT(ISPICKVAL(SBQQ__SubscriptionPricing__c, &quot;Percent Of Total&quot;)),
            FALSE
            )</errorConditionFormula>
        <errorDisplayField>SBQQ__AllocatePotOnOrders__c</errorDisplayField>
        <errorMessage>Subscription Pricing must be &apos;Percent of Total&apos; to set this field to true.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Term_schedule_requires_subscription</fullName>
        <active>true</active>
        <description>Ensures only subscription products have Term Discount Schedule field populated.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__SubscriptionPricing__c, &apos;&apos;),NOT(ISBLANK(SBQQ__TermDiscountSchedule__c)))</errorConditionFormula>
        <errorDisplayField>SBQQ__TermDiscountSchedule__c</errorDisplayField>
        <errorMessage>Only subscription products may specify term discount schedule</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_frequency</fullName>
        <active>true</active>
        <description>When Charge Type is selected as One-Time, Billing Frequency must not be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingFrequency__c, &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingFrequency__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time, a Billing Frequency value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_type</fullName>
        <active>true</active>
        <description>When Charge Type is One-Time or Usage, a Billing Type cannot be selected.</description>
        <errorConditionFormula>OR( 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))), 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Usage&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time or Usage, a Billing Type value cannot be selected.</errorMessage>
    </validationRules>
</CustomObject>